# airtable_frontend

./: .gitignore  README.md
client/: Cargo.toml  index.html  package.json  style.css  tailwind.config.js
client/src/: main.rs
client/src/apis/: mod.rs  table_api.rs
client/src/components/: attachment.rs  content.rs  drawer.rs  dropdown.rs  file_modal.rs  mod.rs  multi_select.rs  sidebar.rs  subtask.rs  subtask_modal.rs
client/src/controllers/: table.rs
