[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bounce = "0.9.0"
log = "0.4"
reqwest-wasm = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
yew = { version = "0.21.0", features = ["csr"] }
